# annetgpgpu

./: FrontendGuide.md  ImplementationGuide.md  ProjectHome.md  QuickStartGuide.md  README.md
examples/misc/: BPNetCPU.cpp  CMakeLists.txt  SOMNetGPU.cpp  Samples.h  SimpFnExt.cpp  SimpFnExtGPU.cpp
src/: AbsNet.cpp  AbsNeuron.cpp  BPKernel.cu  CMakeLists.txt  Functions.cpp  SOMExport.cu  SOMKernel.cu  SOMNet.cpp  SOMNetGPU.cpp
src/include/: BPNet.h  SOMNet.h
src/include/base/: AbsNet.h
src/include/gpgpu/: 2DArray.i  Functors.h  Kernels.h  SOMExport.h  SOMExport.i  SOMNetGPU.h  SOMNetGPU.i
src/include/math/: Functions.h
